# omnia-timeseries-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  azure-pipeline.yaml  azure-pipelines.yaml  pyproject.toml  pytest.ini  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  publish-pypi.yml  trivy-code-scan.yml
examples/: client_secret_auth.ipynb  demo_msal_interactive.py  device_code_auth.ipynb  federation.ipynb  get_data_protobuf.ipynb  timeseries.protoset  usage_examples.ipynb
omnia_timeseries/: api.py  helpers.py  http_client.py  models.py
src/omnia_timeseries/: __init__.py  api.py  helpers.py  http_client.py  models.py
src/omnia_timeseries_api/: __init__.py  api.py  helpers.py  http_client.py
tests/: _unused.py  conftest.py  http_client.py.too_complicated  test_api.py
