[tool.poetry]
name = "omnia_timeseries"
version = "1.4.0"
description = "Official Python SDK for the Omnia Timeseries API"
readme = "README.md"
authors = ["Equinor Omnia Industrial IoT Team <omniaindiot@equinor.com>"]
license = "LICENSE"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = ">=2.28.0,<3.0.0"
azure-identity = ">=1.19.0,<2.0.0"
azure-core = ">=1.30.0,<2.0.0"
opentelemetry-instrumentation-requests = ">=0.54b1,<1.0.0"
opentelemetry-api = ">=1.27.0,<2.0.0"
cryptography = ">=43.0.1,<45.0.0"
pyjwt = ">=2.9.0,<3.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.0,<9.0.0"
requests-mock = ">=1.9.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.0.0,<5.0.0"
black = ">=22.0,<26.0"

[tool.poetry.urls]
repository = "https://github.com/equinor/omnia-timeseries-python"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '^/src/version.py'
extend-exclude = '''
(
^/foo.py
| .*_pb2.py
)
'''

[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"
